# manga-updater

./: .gitignore  Cargo.toml  README.md  manga.test.json  manga.test.yaml
.github/workflows/: rust.yml
docs/openapi/: api-v5.6.1.yaml
src/: configuration.rs  lib.rs  main.rs  mangadex_client.rs  run.rs  startup.rs
src/mangadex/: comic.rs  mod.rs
src/models/: cbz.rs  cli.rs  configuration.rs  mod.rs
