[package]
name = "manga-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
config = "0.13"
env_logger = "0.9"
log = "0.4"
mangadex-api = "2.0.0-rc.1"
reqwest = "0.11"
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
resolve-path = "0.1"
serde = "1.0"
tokio = { version = "1.21", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = "0.6"
