[package]
name = "manga-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
env_logger = "0.10"
log = "0.4"
mangadex-api = "2.1"
mangadex-api-types-rust = "0.8"
reqwest = "0.11"
reqwest-middleware = "0.2"
reqwest-retry = "0.4"
resolve-path = "0.1"
serde = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
url = "2.5"
uuid = { version = "1", features = ["v4", "serde"] }
zip = "0.6"
