[package]
name = "manga-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
env_logger = "0.11"
log = "0.4"
mangadex-api = "=2.1"
mangadex-api-types-rust = "=0.3.4"
reqwest = "0.12"
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
resolve-path = "0.1"
serde = "1.0"
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }
url = "2.5"
uuid = { version = "1", features = ["v4", "serde"] }
zip = "2"
